--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,19 @@ body {
   background-color: #F5F7FB;
   color: #333;
 }
+
+.loading-spinner {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 6px solid rgba(230, 230, 230, .3);
+  border-radius: 50%;
+  border-top-color: #3dc9e5;
+  animation: spin 1s ease-in-out infinite;
+  
+
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
