--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,9 @@
 body {
   background-color: #F5F7FB;
   color: #333;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .loading-spinner {
@@ -15,7 +18,6 @@ body {
   border-radius: 50%;
   border-top-color: #3dc9e5;
   animation: spin 1s ease-in-out infinite;
-  
 
 }
 
